# pjsipDemo

./: .gitignore  CMakeLists.txt  README.md  app.c  main.c
src/: callback.c  callback.h  config.h  init.c  init.h  logger.c  logger.h  phone.h  rtp.c  rtp.h  sip.c  sip.h  utils.c  utils.h
